-Why-Choose-us one card added, -unnecessary modal deleted, -grid updated

--- a/index.html
+++ b/index.html
@@ -49,20 +49,25 @@
             <h2 class="section-title">Why Choose <span class="gradient-text">Overclocked Co.</span></h2>
             <div class="why-choose-grid">
                 <div class="why-choose-card">
-                    <div class="why-choose-icon">🎮</div>
-                    <h3 class="why-choose-title">Convenience</h3>
-                    <p class="why-choose-description">Building gaming PCs is a hobby on its own. If you're more interested in jumping into high-quality gaming action right away, a custom prebuilt is a great route to take. We handle everything so you can game immediately.</p>
-                </div>
-                <div class="why-choose-card">
-                    <div class="why-choose-icon">🎯</div>
-                    <h3 class="why-choose-title">Precision</h3>
-                    <p class="why-choose-description">Buying a custom PC from Overclocked Co. ensures that your components are expertly chosen to maximize your budget and deliver the best possible performance. Every part is carefully selected for optimal compatibility and power.</p>
-                </div>
-                <div class="why-choose-card">
-                    <div class="why-choose-icon">✨</div>
-                    <h3 class="why-choose-title">Aesthetics</h3>
-                    <p class="why-choose-description">Let's be clear - aesthetics are a top priority for everything at Overclocked Co. If you want a beautiful conversation-starter in your gaming setup, our builds are designed to impress with premium RGB lighting and cable management.</p>
-                </div>
+                        <div class="why-choose-icon">🎮</div>
+                        <h3 class="why-choose-title">Convenience</h3>
+                        <p class="why-choose-description">Building gaming PCs is a hobby on its own. If you're more interested in jumping into high-quality gaming action right away, a custom prebuilt is a great route to take. We handle everything so you can game immediately.</p>
+                    </div>
+                    <div class="why-choose-card">
+                        <div class="why-choose-icon">🎯</div>
+                        <h3 class="why-choose-title">Precision</h3>
+                        <p class="why-choose-description">Buying a custom PC from Overclocked Co. ensures that your components are expertly chosen to deliver maximum price to performance ratio. Every part is carefully selected for optimal compatibility and power.</p>
+                    </div>
+                    <div class="why-choose-card">
+                        <div class="why-choose-icon">✨</div>
+                        <h3 class="why-choose-title">Aesthetics</h3>
+                        <p class="why-choose-description">Let's be clear - aesthetics are a top priority for everything at Overclocked Co. If you want a beautiful conversation-starter in your gaming setup, our builds are designed to impress with premium RGB lighting and cable management.</p>
+                    </div>
+                    <div class="why-choose-card">
+                        <div class="why-choose-icon">💰</div>
+                        <h3 class="why-choose-title">Unbeatable Pricing</h3>
+                        <p class="why-choose-description">We offer the most competitive prices in the market without compromising on quality. Our direct partnerships with component manufacturers and efficient operations allow us to pass the savings directly to you. Get premium performance at the best possible price - guaranteed.</p>
+                    </div>
             </div>
         </div>
     </section>
@@ -262,36 +267,6 @@
             <p>&copy; 2025 Overclocked Co. Crafted with precision and passion.</p>
         </div>
     </footer>
-
-    <!-- Build Modal -->
-    <div id="buildModal" class="modal">
-        <div class="modal-content">
-            <button class="modal-close" onclick="closeModal()">&times;</button>
-            <div class="modal-header">
-                <div class="modal-icon" id="modalIcon"></div>
-                <div class="modal-title-section">
-                    <h2 class="modal-title" id="modalTitle"></h2>
-                    <p class="modal-price" id="modalPrice"></p>
-                </div>
-            </div>
-            <div class="modal-body">
-                <div class="modal-specs">
-                    <h3>Specifications</h3>
-                    <table class="specs-table" id="specsTable">
-                        <!-- Specs will be populated by JavaScript -->
-                    </table>
-                </div>
-                <div class="modal-description">
-                    <h3>Description</h3>
-                    <p id="modalDescription"></p>
-                </div>
-            </div>
-            <div class="modal-actions">
-                <button class="action-button primary" onclick="scrollToContact()">Order This Build</button>
-                <button class="action-button secondary" onclick="scrollToContact()">Request Custom Build</button>
-            </div>
-        </div>
-    </div>
 
     <script src="app.js"></script>
 </body>
